# devportai

./: .env.example  .gitignore  CHAT_ENDPOINT_GUIDE.md  CHAT_IMPLEMENTATION_COMPLETE.md  CHAT_IMPLEMENTATION_SUMMARY.md  Dockerfile.postgres  FRONTEND_IMPLEMENTATION_COMPLETE.md  FRONTEND_UI_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  Makefile  QUICK_START_TEST.md  RAG_IMPLEMENTATION.md  RAG_SETUP_COMPLETE.md  README.md  docker-compose.yml  init-db.sql
.claude/: settings.local.json
backend/: .env.example  Dockerfile  README.md  demo.py  pyproject.toml  requirements.txt  sample_document.txt  test_chat_endpoint.py
backend/app/: __init__.py  chat_schemas.py  chat_service.py  chunking.py  config.py  database.py  embeddings.py  ingestion.py  main.py  models.py  retrieval.py  schemas.py  tracing.py
backend/tests/: __init__.py  test_chat.py  test_chat_api.py  test_chunking.py  test_retrieval.py
backend/tests/evals/: __init__.py  golden_data.json  run_eval.py
frontend/: Dockerfile  README.md  index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  CitationModal.jsx  DocumentUpload.jsx  MessageBubble.jsx  Sidebar.jsx  TracePanel.jsx  VerifierBadge.jsx
